test/functional/directory/gds/ts/gdssetup/lib/valid/max_dirid.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# 
# HISTORY
# $Log: max_dirid.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:35:41  marty
# 	Update copyright years
# 	[1996/03/10  19:38:11  marty]
#
# Revision 1.1.4.1  1995/12/11  16:49:08  root
# 	Submit
# 	[1995/12/11  16:36:27  root]
# 
# Revision 1.1.2.1  1994/08/19  13:55:08  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:43:34  marrek]
# 
# 	Improvement in test code coverage (ot11586).
# 	[1994/08/10  13:10:19  marrek]
# 
# $EndLog$
#
# $RCSfile: max_dirid.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:35:41 $
#

gdssysadm -fd -p
gdssysadm -fc -m2 -d20 -p
gdssysadm -fA -p
